--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "browser-router": "^0.2.0",
+    "delivery": "file:",
+    "express": "^4.21.1",
+    "pg": "^8.13.1",
+    "pkg": "^5.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
@@ -22,6 +28,12 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "react-router-dom": "^6.26.0",
     "vite": "^5.2.0"
-  }
+  },
+  "main": "node.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
